stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_duplicate_type_param.snap
---
source: tests/fixtures.rs
assertion_line: 1335
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/duplicate_type_param.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × duplicate type parameter
   ╭─[tests/fixtures/diagnostics/types/duplicate_type_param.ml:1:18]
 1 │ type box<'value, 'value> = Box('value)
   ·                  ───┬──
   ·                     ╰── this type parameter name is already used by this type
 2 │ 
   ╰────
  help: choose a unique name for each type parameter
